--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "YOUR TOKEN",
+    "token": "ODA5NTQxOTIzMDAxMDczNzA1.YCWmqw.lX-DQNiAGXr6_S8EMV8YUyJ1Hyg",
     "prefix": "?",
-    "ServerID": "YOUR SERVER ID"
+    "ServerID": "814610231615029260"
 }
